@@ -4521,8 +4521,9 @@
          (Fred).
 20130531 man/fuse.1: add missing documentation (fixes bug #282) (Stuart).
 20130531 ui/win32/installer/fuse.nsi.in: adding Fuse to the OpenWith list for
-         file extensions could result in an true association under some
+         file extensions could result in a true association under some
          circumstances on Windows 7 (thanks, Alessandro Grussu) (Sergio).
 20130603 sound/aosound.c: remove warnings (mostly patch #313) (Rene Ladan).
 20130603 ui/widget/menu.c: (bodge) fix warning.
 20130605 roms/se-1.rom: fix save tape traps with SE ROM (Andrew Owen and Fred).
+20130617 fuse.c: don't ignore the return code from setuid() (Sergio).
